# asv_spyglass

./: .gitignore  .readthedocs.yaml  README.md  pixi.toml  pyproject.toml
.github/workflows/: build_test.yml
docs/source/: cli.md  conf.py  index.md  usage.md
src/asv_spyglass/: _asv_ro.py  _aux.py  _num.py  changes.py  cli.py  compare.py  results.py
tests/: test_num.py  test_results.py  test_ro.py
tests/approved_files/: test_results.test_do_compare.approved.txt
