[project]
name = "asv_spyglass"
version = "0.1.0"
description = "File oriented ASV benchmark comparer"
authors = [
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
]
dependencies = ["asv @ git+https://github.com/airspeed-velocity/asv/", "click>=8.1.8", "asv-runner>=0.2.1", "polars>=1.20.0", "rich-click>=1.8.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Benchmark",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "approvaltests>=14.3.0",
    "pytest-datadir>=1.5.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
asv-spyglass = "asv_spyglass.cli:cli"

[tool.ruff]
line-length = 88
extend-include = ["tests/**/*.py"]

[tool.ruff.lint]
extend-ignore = [
    "E741", # Do not use variables named "I", "O", or "l"
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # sort
]
