[project]
name = "asv_spyglass"
dynamic = ["version"]
description = "File oriented ASV benchmark comparer"
authors = [
    {name = "Rohit Goswami", email = "rgoswami@ieee.org"},
]
dependencies = ["asv>=0.6.5", "click>=8.1.8", "rich-click>=1.8.5", "asv-runner>=0.2.1", "polars>=1.20.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Benchmark",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "approvaltests>=14.3.0",
    "pytest-datadir>=1.5.0",
]
doc = [
    "sphinx>=7.0.0",
    "pydata-sphinx-theme>=0.13.0",
    "myst-parser>=1.0.0",
    "sphinx-click>=4.4.0",
]
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/asv_spyglass/_version.py"

[project.scripts]
asv-spyglass = "asv_spyglass.cli:cli"

[tool.ruff]
line-length = 88
extend-include = ["tests/**/*.py"]

[tool.ruff.lint]
extend-ignore = [
    "E741", # Do not use variables named "I", "O", or "l"
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # sort
]
